Criar header e footer
Criação do header, nav, e footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Explorando o Mundo</title>
 </head>
 <body>
-    
+    <!--Cabeçalho-->
+    <header>
+        <h1>Explorando o Mundo</h1>
+        <h2>Relatos, dicas e aventuras ao redor do planeta</h2>
+         <!--Navegação-->
+        <nav>
+            <ul>
+              <li><a href="#destinos" style="color: white;">Destinos</a></li>
+              <li><a href="#dicas" style="color: white;"">Dicas</a></li>
+              <li><a href="#contato" style="color: white;"">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <p>&copy; 2025 Explorando o Mundo. Todos os direitos reservados.</p>
+        <p>Contato: explorando@email.com</p>
+        <p><a href="https://outroblogdeviagem.com" target="_blank" style="color: white;"></a>Visite outros blogs</p>
+    </footer>
 </body>
 </html>
