Criar seção de dicas
Criação da seção de dicas de viagem

--- a/index.html
+++ b/index.html
@@ -38,7 +38,32 @@
             <p>O <em>Chile</em> me surpreendeu com suas paisagens e a simpatia das pessoas. As cordilheiras são espetaculares</p>
         </article>
     </section>
-    
+
+    <!--Seção de dicas-->
+    <section id="dicas">
+        <h3>Dicas para se dar bem viajando</h3>
+        <article>
+            <h4>Como planejar um roteiro</h4>
+            <ol>   
+                <li>Escolha o destino</li>
+                <li>Pesquise as principais atrações</li>
+                <li>Monte um cronograma diário</li>
+            </ol>
+            <h4>O que levar na mala</h4>
+            <ul>
+                <li>Roupas confortáveis e apropriadas para o clima</li>
+                <li>Documentos importantes</li>
+                <li>Adaptadores (ex: de tomada)</li>
+            </ul>
+            <h4>Como economizar dinheiro</h4>
+            <ul>
+                <li>Pesquise voos com antecedência</li>
+                <li>Use aplicativos de desconto e de comparação de preços</li>
+                <li>Reserve as hospedagens com antecedência</li>
+            </ul>
+        </article>
+    </section>
+
     <footer>
         <p>&copy; 2025 Explorando o Mundo. Todos os direitos reservados.</p>
         <p>Contato: explorando@email.com</p>
