criar seção de mídia e conteúdo relacionado
Criação da seção de mídia (adicionei foto, vídeo e áudio) e conteúdo relacionado

--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
         </article>
     </section>
 
+    <!--Mídia-->
+    <section>
+        <h3>Galeria de Viagens</h3>
+        <img src="eiffel.jpg" alt="Foto da Torre Eiffel em Paris" title="Torre Eiffel">
+        <video src="istockphoto-1371228411-640_adpp_is.mp4" controls title="Vídeo no Japão">Seu navegador não suporta o vídeo</video>
+        <audio src="nature-ambience-323729.mp3" controls>Seu navegador não suporta o áudio</audio>
+    </section>
+
+    <!--Conteúdo Relacionado-->
+    <aside>
+        <h3>Links Interessantes</h3>
+        <ul>
+            <li><a href="https://viajenaviagem.com" target="_blank" title="Viaje na Viagem">Viaje na Viagem</a></li>
+            <li><a href="https://melhoresdestinos.com.br" target="_blank" title="Melhores Destinos">Melhores Destinos</a></li>
+        </ul>
+    <!--Citação-->
+        <blockquote cite="https://www.pensador.com/frase/MTM1NzM5Nw/">"Viajar é trocar a roupa da alma." - Mario Quintana</blockquote>
+    </aside>
+
     <footer>
         <p>&copy; 2025 Explorando o Mundo. Todos os direitos reservados.</p>
         <p>Contato: explorando@email.com</p>
