Pequena alteração na citação
Pequena mudança na escrita da citação, para fins de fidelidade

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <li><a href="https://melhoresdestinos.com.br" target="_blank" title="Melhores Destinos">Melhores Destinos</a></li>
         </ul>
     <!--Citação-->
-        <blockquote cite="https://www.pensador.com/frase/MTM1NzM5Nw/">"Viajar é trocar a roupa da alma." - Mario Quintana</blockquote>
+        <blockquote cite="https://www.pensador.com/frase/MTM1NzM5Nw/">"Viajar é mudar a roupa da alma." - Mario Quintana</blockquote>
     </aside>
 
     <!--Formulário de contato-->
